Correções nas anotações do swagger em cidades
